(library
 (name ambient_context)
 (public_name ambient-context)
 (synopsis
  "Abstraction over thread-local storage and continuation-local storage mechanisms")
 (libraries
  ambient-context.types
  (select
   ambient_context.ml
   from
   (threads ambient-context.tls -> ambient_context.threads.ml)
   (-> ambient_context.ref.ml))))
