(library
 (name ambient_context)
 (public_name ambient-context)
 (synopsis
  "Abstraction over thread-local storage and continuation-local storage mechanisms")
 (libraries
  ambient-context.types
  (select
   metastorage.ml
   from
   (threads ambient-context.tls -> metastorage.threads.ml)
   (-> metastorage.ref.ml))))
